--- a/.github/workflows/azure-deploy.yaml
+++ b/.github/workflows/azure-deploy.yaml
@@ -34,6 +34,10 @@ jobs:
     
     - name: Run tests
       run: dotnet test --configuration Release --no-build --verbosity normal
+      env:
+        LANG: en_US.UTF-8
+        LC_ALL: en_US.UTF-8
+        DOTNET_SYSTEM_GLOBALIZATION_INVARIANT: false
     
     - name: Publish
       run: dotnet publish SimpleExample.API/SimpleExample.API.csproj -c Release -o ./publish --no-build
